# OOP-LAB-2

./: CMakeLists.txt  README.md  main.cpp
include/: modules.hpp
src/: modules.cpp
test/: test.cpp
